# JnRMaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TestProject.jrm  build_and_run.sh  clean.sh  log.txt
desktop-linux/: CMakeLists.txt  build.sh
desktop-linux/cmake/modules/: FindSOIL.cmake
desktop-win/: CMakeLists.txt
emscripten/: CMakeLists.txt  build.sh  cmake-post-build.sh  cmake-pre-build.sh
emscripten/templates/: app_library.js  index.html
include/: camera.h  config.h  config.h.in  entity_camera.h  entity_level_layer.h  entity_object.h  entity_player.h  entity_solid.h  entity_world_layer.h  events.h  framebuffer.h  gui.h  imconfig.h  imconfig_jnrmaker.h  jnr_window.h  message_manager.h  primitive.h  primitive_cube.h  primitive_line.h  primitive_quad.h  project_manager.h  resource_manager.h  scene.h  scene_entity.h  shader.h  solid_cs.h  solid_grid.h  solid_mesh.h  solid_model.h  solid_sprite.h  texture.h  tilemap.h  tilemap_manager.h  time_helper.h  window.h
include/entities/: Entity.h  EntityCamera.h  EntityObject.h  EntityPlayer.h  EntitySolid.h  EntityWorldLayer.h
include/graphics/: AppWindow.h  Framebuffer.h  JNRWindow.h  Primitive.h  PrimitiveCube.h  PrimitiveLine.h  PrimitiveQuad.h  Scene.h  Shader.h  SolidCS.h  SolidGrid.h  SolidMesh.h  SolidModel.h  SolidSprite.h  Texture.h  Tilemap.h
include/imgui/: imconfig.h  imgui-SFML.cpp
include/ui/: Gui.h
include/utils/: Events.h  FormatHelper.h  Injector.h  MessageManager.h  ProjectManager.h  ResourceManager.h  ResourceManagerOld.h  Resources.h  TilemapManager.h  TimeHelper.h
include/utils/logging/: ILogger.h  SimpleLogger.h  UILogger.h
include/utils/manager/: GraphicsManager.h  IManager.h  IResourceManager.h  ShaderManager.h  SimpleResourceManager.h  TileManager.h
resources/shaders/: level_layer.vert  line.frag  scene.frag  solid.frag  sprite.frag
resources/shaders/es/: level_layer.vert  line.frag  solid.frag
resources/www/: index.html  server.py
resources/www/js/: app_library.js
src/: CMakeLists.txt  Main.cpp  entity_level_layer.cpp  entity_solid.cpp  entity_world_layer.cpp  framebuffer.cpp  gui.cpp  main.cpp  message_manager.cpp  primitive.cpp  primitive_cube.cpp  primitive_line.cpp  primitive_quad.cpp  project_manager.cpp  resource_manager.cpp  scene.cpp  shader.cpp  solid_cs.cpp  solid_grid.cpp  solid_sprite.cpp  texture.cpp  tilemap.cpp  tilemap_manager.cpp  window.cpp
src/entities/: CMakeLists.txt  EntitySolid.cpp  EntityWorldLayer.cpp
src/graphics/: AppWindow.cpp  CMakeLists.txt  Framebuffer.cpp  JNRWindow.cpp  Primitive.cpp  PrimitiveCube.cpp  PrimitiveLine.cpp  PrimitiveQuad.cpp  Scene.cpp  Shader.cpp  SolidCS.cpp  SolidGrid.cpp  SolidSprite.cpp  Texture.cpp  Tilemap.cpp  Window.cpp
src/shaders/: level_layer.frag  level_layer.vert  line.frag  line.vert  scene.frag  solid.frag  solid.vert  sprite.frag  sprite.vert
src/shaders/es/: level_layer.frag  level_layer.vert  line.vert  scene.frag  solid.frag  sprite.frag  sprite.vert
src/ui/: CMakeLists.txt  Gui.cpp
src/utils/: CMakeLists.txt  Injector.cpp  MessageManager.cpp  ProjectManager.cpp  ResourceManager.cpp  ResourceManagerOld.cpp  Resources.cpp  TilemapManager.cpp
src/utils/logging/: CMakeLists.txt  SimpleLogger.cpp  UILogger.cpp
src/utils/manager/: GraphicsManager.cpp  ShaderManager.cpp  TileManager.cpp
